feat: resource logging & change user & post business logic
